crates/check_cli/tests/snapshots/main_cases_protected_files/not_process_file_from_cli.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `package-lock.json`

```json
{ "name": "test" }
```

# Termination Message

```block
format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × No files were processed in the specified paths.
  
  i Check your check.json or check.jsonc to ensure the paths are not ignored by the configuration.
  
  i These paths were provided but ignored:
  
  - package-lock.json
  


```

# Emitted Messages

```block
Checked 0 files in <TIME>. No fixes applied.
```
