crates/check_cli/tests/snapshots/main_cases_protected_files/not_process_file_from_stdin_format.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
# Input messages

```block
{ "name": "test" }
```

# Emitted Messages

```block
{ "name": "test" }
```


