crates/check_cli/tests/snapshots/main_cases_protected_files/should_return_the_content_of_protected_files_via_stdin.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
# Input messages

```block
{ "name": "something" }
```

# Emitted Messages

```block
{ "name": "something" }
```


